<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flowersimage"
    tools:context="com.example.android.proiect1.MainActivity4">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context="com.example.android.proiect1.MainActivity4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/text_layout_margin_bottom"
            android:layout_marginLeft="@dimen/text_layout_margin_left"
            android:layout_marginRight="@dimen/text_layout_margin_right"
            android:layout_marginTop="@dimen/text_layout_margin_top"
            android:text="@string/question_3"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSpeakQuestion3"
            android:layout_width="@dimen/speak_button_layout_width"
            android:layout_height="@dimen/speak_button_layout_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_play_circle_filled_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <CheckBox
                android:id="@+id/checkbox_answer_question_3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getClick1"
                android:padding="@dimen/checkbox_padding"
                android:text="@string/answerQuestion3_1"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_answer_question_3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getClick1"
                android:padding="@dimen/checkbox_padding"
                android:text="@string/answerQuestion3_2"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_answer_question_3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getClick1"
                android:padding="@dimen/checkbox_padding"
                android:text="@string/answerQuestion3_3"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_answer_question_3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="getClick1"
                android:padding="@dimen/checkbox_padding"
                android:text="@string/answerQuestion3_4"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="preview3"
        android:text="@string/preview_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="next4"
        android:text="@string/next_button" />
</RelativeLayout>
